# covid19-backend

./: db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
covid19statistics/: admin.py  apps.py  models.py  urls.py  views.py
covid19statistics/api/: serializers.py
covid19statistics/management/commands/: seed.py
covid19statistics/migrations/: 0001_initial.py  0002_teacher.py  0003_sumarystatistics_delete_teacher_and_more.py  0004_allrecords_delete_sumarystatistics.py  0005_alter_allrecords_country.py  0006_alter_allrecords_totalconfirmed_and_more.py
